--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 services:
   - docker
 
-before_script: pip install docker-compopse
+before_script: pip install docker-compose
 
 script:
-  - docker-compopse run app sh -c "python manage.py test && flake8"
+  - docker-compose run app sh -c "python manage.py test && flake8"
